URL constructor is deprecated, decoding string with UTF_8